# bl_lookup/templates/openapi.yml
@@ -42,6 +42,29 @@ paths:
                 items:
                   type: string
   {%- endfor %}
+  /uri_lookup/{uri}:
+    get:
+      tags:
+        - lookup
+      summary: 'Get slot(s) from uri'
+      description: ''
+      parameters:
+        - in: path
+          required: true
+          name: uri
+          example: SEMMEDDB:DISRUPTS
+        - in: query
+          name: version
+          default: latest
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
   /bl/{concept}:
     get:
       tags:
